kubernetes/apps/nextcloud/pb4162-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nextcloud-ingress-pb4162-dev
  namespace: nextcloud
spec:
  ingressClassName: traefik
  rules:
  - host: nextcloud.${ROOT_DOMAIN}
    http:
      paths:
      - backend:
          service:
            name: nextcloud
            port:
              number: 8080
        path: /
        pathType: Prefix
